--- a/index.org
+++ b/index.org
@@ -7,4 +7,6 @@
 #+LANGUAGE:    en
 #+OPTIONS:     H:3 num:nil toc:t \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
 #+DESCRIPTION: 首页
-欢迎来到我的博客
+
+
+[[file:dogspacemacs.png]]
