--- a/blog/merge-two-git-repo.org
+++ b/blog/merge-two-git-repo.org
@@ -1,4 +1,4 @@
-#+TITLE:       合并两个git仓库，保留两个仓库的commit记录
+#+TITLE:       合并两个git仓库，并保留两个仓库的commit记录
 #+AUTHOR:      han1475
 #+EMAIL:       me@han1475.com
 #+DATE:        2019-07-28 Sun
@@ -7,10 +7,10 @@
 #+TAGS:        git
 #+LANGUAGE:    en
 #+OPTIONS:     H:3 num:nil toc:nil \n:nil ::t |:t ^:nil -:nil f:t *:t <:t
-#+DESCRIPTION: 合并两个git仓库，保留两个仓库的commit记录
+#+DESCRIPTION: 合并两个git仓库，并保留两个仓库的commit记录
 
-* 本文示例：将repo1合并到repo2中，并保留repo1的commit记录.
-** 在repo2中依次运行下列命令
+* 将repo1合并到repo2中，并保留repo1的commit记录.
+* 在repo2中依次运行下列命令
 #+BEGIN_SRC 
   git remote add other /your/path/to/repo1
   git fetch other
@@ -18,5 +18,5 @@
   git checkout master
   git merge repo1 --allow-unrelated-histories
 #+END_SRC 
-** 为解决合并仓库时出现的fatal: refusing to merge unrelated histories错误，我们这里使用了--allow-unrelated-histories选项。
-** 合并仓库时和常规merge一致需处理合并冲突。
+* 为解决合并仓库时出现的fatal: refusing to merge unrelated histories错误，我们这里使用了--allow-unrelated-histories选项。
+* 合并仓库时和常规merge一致需处理合并冲突。
