--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Personal site of , managed by emacs, org mode, git and org-page.
+Personal site of han1475, managed by emacs, org mode, git and org-page.
