--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Personal site of han1475, managed by emacs, org mode, git and ox-hugo.
+Personal site of han1475, managed by emacs, org mode, git, ox-hugo, and travis.
