--- a/org/git.org
+++ b/org/git.org
@@ -58,4 +58,5 @@
       git checkout master
       git merge repo1 --allow-unrelated-histories
      #+END_SRC 
-*** 为解决合并仓库时出现的fatal: refusing to merge unrelated histories错误，我们这里使用了--allow-unrelated-histories选项。
+*** 常见错误：
+    为解决合并仓库时出现的fatal: refusing to merge unrelated histories错误，我们这里使用了--allow-unrelated-histories选项。
