--- a/org/git.org
+++ b/org/git.org
@@ -16,7 +16,7 @@
      它能让你将另一个仓库克隆到自己的项目中，同时还保持提交的独立。
    #+END_QUOTE  
 *** 添加子模块 
-    #+BEGIN_SRC
+    #+BEGIN_SRC shell
       git submodule add MOD_REPO YOUR_PATH
     #+END_SRC
     上述命令会在项目下生成.gitmodules文件，其中保存了子模块的信息。
