--- a/orgpost/github-actions.org
+++ b/orgpost/github-actions.org
@@ -6,8 +6,25 @@
 #+HUGO_CATEGORIES: 笔记
 #+HUGO_DRAFT: false
 #+BEGIN_QUOTE
-  Github Actions是Github推出的自动化工作流程工具。
+  Github Actions是Github的持续集成服务，于2018年10月开始测试，2019年11月13日正式上线。
 #+END_QUOTE
 <!--more-->
+** 一、GitHub Actions是什么
+   持续集成包括很多操作，比如运行测试，构建版本等，GitHub把这些操作称之为Actions。
+** 二、为什么选择GitHub Actions
+   1. Github Actions采取了类似npm包的处理方式，允许直接引用其他人写好的Action脚本文件。
+   2. Github在市场中提供了Action的搜索功能，方便自行搜索，搜索时只需要在类型（Type）中选择Actions即可。
+   3. Github Actions 配置直接存储于代码仓库的 ==.github/workflows == 目录下，避免配置分离难以维护。
+** 三、关于GitHub Actions引用他人脚本
+   1. 采用 ==username/reponame== 的方式引用。如 ==actions/setup-node== 就是指引用官方仓库
+   ==github.com/actions/setup-node== 安装Node.js的脚本。Github Actions官方的Actions都存储在
+   ==github.com/actions==仓库中
+   2. Github Actions采用代码仓库的方式存储，因此你可以引用特定版本，下列都是正确的引用。
+   #+BEGIN_SRC
+     actions/setup-node@9a99bb3 # 指向一个 commit
+     actions/setup-node@v1.2.0  # 指向一个标签
+     actions/setup-node@master  # 指向一个分支
+   #+END_SRC
+** 四、基本概念
 To Be Continued.
 
