--- a/orgpost/about.org
+++ b/orgpost/about.org
@@ -13,14 +13,18 @@
 
 ** 关于我
 *** 程序猿
-    爱好很多，喜欢尝试新事物，又偏爱老物件。
+#+BEGIN_QUOTE 
+  爱好很多，喜欢尝试新事物，又偏爱老物件。
+#+END_QUOTE
     - *惯用操作系统* —— *Arch Linux* ，喜欢尝试新的特性，又受够了Gentoo的编译地狱。
     - *常用快捷键设置* —— *vi* ，Chrome，Emacs，VSCode，Idea都安装了vi键位插件，万物皆vi。
     - *日常编辑器* —— *Emacs* ，用于写博客以及其他日常文本编辑。
     - *代码编辑器* —— *VSCode* ，尤其推出 =Remote-SSH插件= 之后，方便window下访问Linux虚拟机。
     - *编程语言* —— 都会，但是不够深入 =HTML/CSS/JS=，=Java=，=c/c++/c#=
 *** 技术宅
-    喜欢折腾硬件设备
+#+BEGIN_QUOTE 
+   喜欢折腾硬件设备
+#+END_QUOTE
     - *单片机* 尝试过51，接下来试试Micro Bit和Arduino。
     - *树莓派* 很好但是太贵，可以尝试国产方案。
 *** 图吧垃圾佬 
@@ -38,4 +42,3 @@
 ** 关于本站
    - 本站所使用的主题是[[https://github.com/xianmin/hugo-theme-jane][hugo-theme-jane]]。
    - 本站是在Emacs下写作，通过[[https://github.com/kaushalmodi/ox-hugo][ox-hugo]]导出为Markdown,再由[[https://gohugo.io/][hugo]]编译为静态网站发布在github上的。
-   - 本站内容除特殊说明外均采用[[https://creativecommons.org/licenses/by-nc-nd/4.0/][知识共享署名-非商业性使用-禁止演绎 4.0 国际许可协议]]进行许可。
