--- a/orgpost/about.org
+++ b/orgpost/about.org
@@ -42,9 +42,9 @@
 *** 音乐
     纯粹喜欢听的音乐
 
-    { {< music "/music/chengdu.mp3" "1.成都-陈一发儿" >} }
+    { {< custommusic "/music/chengdu.mp3" "1.成都-陈一发儿" >} }
 
-    { {< music "/music/tonghauzhen.mp3" "2.童话镇-陈一发儿" >} }
+    { {< custommusic "/music/tonghauzhen.mp3" "2.童话镇-陈一发儿" >} }
 
 ** 关于本站
    - 本站所使用的主题是[[https://github.com/xianmin/hugo-theme-jane][hugo-theme-jane]]。
