--- a/orgpost/2-posts.org
+++ b/orgpost/2-posts.org
@@ -38,16 +38,17 @@
 <!--more-->
 
 *** 技术选型
-    1. 生态
-       技术选型时首先要考虑的就是生态。没有成熟的社区、健全的文档、广泛的使用人群，那这项技术在选型时就要慎之又慎。前人踩坑并且有大量的相关从业人员
-       才是更好的选择。落实在个人的选择上，举例如下：脚本用 =ruby（rake）= 、使用qwe布局的键盘。
-    2. 不要滥用特性
-       为了用而用很容易变成瞎折腾，如一个脚本能用 =bash= 实现，就不要用更高层次的工具，如 =ruby= ，真正有需求时再去做。
+**** 生态
+     1. 技术选型时一定要考虑生态。 成熟的社区、健全的文档、广泛的使用人群踩坑，并且有大量的相关人员。
+     2. 落实在个人的选择上，举例如下：脚本用 =ruby（rake）= 、使用qwe布局的键盘。
+**** 不要滥用特性
+     为了用而用很容易变成瞎折腾，如一个脚本能用 =bash= 实现，就不要用更高层次的工具，如 =ruby= ，真正有需求时再去做。
 *** 问题解决
-    1. 官方
-        第一时间查阅官方资料和文档，第一时间寻求官方的帮助。
-    2. 善用搜索引擎
-       对程序员来说就是面向 =stackoverflow= 编程 (*^_^*)；假设你可以访问谷歌，[[https://zh.lmgtfy.com/?q=your+question&pp=1][点这里一定可以解决]]
+**** 官方支持
+第一时间查阅官方资料和文档，第一时间寻求官方的帮助。
+**** 善用搜索引擎：
+     1. 对程序员来说就是面向 =stackoverflow= 编程 (*^_^*)；
+     2. 普通人来说假设你可以访问谷歌，[[https://zh.lmgtfy.com/?q=your+question&pp=1][点这里解决你的问题]]
 
 
 ** DONE 备份要两地三中心:)                                         :数据备份:
@@ -60,7 +61,7 @@
 <!--more-->
 *** 两地三中心
 #+BEGIN_QUOTE
-  两地三中心：“两地三中心”即生产数据中心、同城灾备中心、异地灾备中心建设方案。
+  两地三中心：即生产数据中心、同城灾备中心、异地灾备中心建设方案。
   两个城市的三个数据中心互联互通，如果一个数据中心发生故障或灾难，其他数据中心可以正常运行并对关键业务或全部业务实现接管。
 #+END_QUOTE
 *** 同城双活数据中心
@@ -70,8 +71,8 @@
   二是在一个数据中心发生故障或灾难的情况下，其他数据中心可以正常运行并对关键业务或全部业务实现接管，实现用户的“故障无感知”。
 #+END_QUOTE
 *** 个人思考
-**** 数据一定要做好备份
-     1. 本人亲身的教训：
-        初中数据丢过一次，内存卡损坏，同学数据全丢了。大学硬盘不慎损坏，高中阶段全部信息学奥赛等资料全丢，都是精心整理的心血。
-     2. 根据上述原则目前的备份方案：
-        印象笔记、个人网站（github）、电脑、移动硬盘各自保存一份。
+**** 亲身的教训：
+     1. 初中数据丢过一次，内存卡损坏，同学数据全丢了。
+     2. 上大学时硬盘不慎损坏，高中阶段全部信息学奥赛等资料全丢，都是精心整理的心血。
+**** 目前的备份方案：
+     印象笔记、个人网站（github）、电脑、移动硬盘各自保存一份，四地三中心和同城双活全都做到了，:)。
