--- a/orgpost/2-posts.org
+++ b/orgpost/2-posts.org
@@ -45,13 +45,13 @@
      为了用而用很容易变成瞎折腾，如一个脚本能用 =bash= 实现，就不要用更高层次的工具，如 =ruby= ，真正有需求时再去做。
 *** 问题解决
 **** 官方支持
-第一时间查阅官方资料和文档，第一时间寻求官方的帮助。
+     第一时间查阅官方资料和文档，第一时间寻求官方的帮助。
 **** 善用搜索引擎：
      1. 对程序员来说就是面向 =stackoverflow= 编程 (*^_^*)；
-     2. 普通人来说假设你可以访问谷歌，[[https://zh.lmgtfy.com/?q=your+question&pp=1][点这里解决你的问题]]
+     2. 普通人来说，假设你可以访问谷歌，[[https://zh.lmgtfy.com/?q=your+question&pp=1][点这里解决你的问题]]
 
 
-** DONE 备份要两地三中心:)                                         :数据备份:
+** DONE 数据备份要两地三中心                                       :数据备份:
    CLOSED: [2019-12-21 Sat 23:53]
    :PROPERTIES:
    :EXPORT_FILE_NAME: backup
